Fix overlaping elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -330,7 +330,7 @@ html {
   /* Feature section css start from here */
   .feature-program-container {
     position: relative;
-    top: 50rem;
+    top: 150rem;
   }
 
   .feature-main-text {
@@ -348,7 +348,7 @@ html {
     display: flex;
     flex-direction: column;
     position: relative;
-    top: 90rem;
+    top: 190rem;
   }
 
   .boxes-group {
@@ -463,7 +463,7 @@ html {
 
   .partner-section2 {
     position: relative;
-    top: 90rem;
+    top: 180rem;
     height: 45vh;
     background-color: var(--color-background);
     display: block;
@@ -508,30 +508,33 @@ html {
     width: 60px;
   }
 
-  .footer-section {
-    position: relative;
-    top: 150rem;
-    display: none;
-  }
-
-  .footer-section2 {
-    position: relative;
-    top: 100rem;
-    height: 40em;
-  }
-
-  .footer-section2 p {
-    color: black;
-    text-align: center;
-    height: 15em;
-  }
-
   .footer-container {
     display: flex;
-    justify-content: space-evenly;
-    height: 55rem;
-    font-size: 12px;
-    margin-bottom: 15em;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    flex-direction: row;
+    position: relative;
+    background-color: #272a32;
+    height: 8vh;
+  }
+
+  .footer-container2 {
+    display: flex;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    flex-direction: row;
+    position: relative;
+    background-color: #d3d3d3;
+    height: 8vh;
+  }
+
+  .footer-container p {
+    font-size: 1.3em;
+    padding: 5px;
   }
 
   .footer-img {
@@ -655,12 +658,14 @@ html {
   .logo-section {
     height: 63vh;
     width: 100%;
+    margin-top: 80em;
   }
 
   .logo-text {
     color: var(--color-background);
     font-size: 30rem;
     text-align: center;
+    font-weight: bold;
   }
 
   .logo-text-line {
@@ -678,7 +683,7 @@ html {
   }
 
   .logo-para-heading p {
-    font-size: 20rem;
+    font-size: 13rem;
     text-align: center;
     padding: 4rem;
     margin: 3rem;
@@ -689,15 +694,13 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80%;
     margin: auto;
     position: relative;
     top: 82rem;
-    border: 1px solid var(--color-tertiary);
   }
 
   .webly-logo img {
-    width: 250px;
+    width: 40%;
   }
 
   .past-section {
@@ -821,11 +824,39 @@ html {
     text-align: center;
     color: var(--color-white);
   }
+
+  .footer-section2 {
+    display: none;
+  }
+
+  .footer-section1 {
+    display: none;
+  }
 }
 
 @media only screen and (min-width: 768px) {
   html {
     font-size: 5.6%;
+  }
+
+  .footer-section2 {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    top: 300rem;
+    height: 30vh;
+    background-color: #d3d3d3;
+  }
+
+  .webly-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: auto;
+    position: relative;
+    top: 82rem;
   }
 
   .footer-section {
@@ -1059,9 +1090,13 @@ html {
   .pastimage2::before {
     width: 49%;
   }
+
+  .footer-section1 {
+    display: none;
+  }
 }
 
-@media only screen and (min-width: 912px) {
+/* @media only screen and (min-width: 912px) {
   .main-program {
     height: 28vh;
   }
@@ -1089,7 +1124,7 @@ html {
   .partner-section {
     height: 18vh;
   }
-}
+} */
 
 @media only screen and (min-width: 1024px) {
   html {
@@ -1105,8 +1140,20 @@ html {
     width: 480rem;
   }
 
-  .footer-section {
-    display: block;
+  .footer-section1 {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    top: 60rem;
+    height: 30vh;
+    background-color: #d3d3d3;
+  }
+
+  .footer-section1 p {
+    color: #d3d3d3;
+    text-align: justify;
+    padding-left: 5em;
   }
 
   .partner-section {
@@ -1121,11 +1168,6 @@ html {
   .boxes-container {
     position: relative;
     top: 100rem;
-  }
-
-  .feature-program-container {
-    position: relative;
-    top: -50rem;
   }
 
   .feature-boxes {
@@ -1203,17 +1245,17 @@ html {
 
   .main-program-container {
     position: absolute;
-    top: 480em;
+    top: 460em;
   }
 
   .boxes-container {
     position: relative;
-    top: 60rem;
+    top: 90rem;
   }
 
   .feature-program-container {
     position: relative;
-    top: -50rem;
+    top: -20rem;
   }
 
   .feature-boxes {
